// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/spin/demo/basic.md correctly 1`] = `
<div
  class="ant-spin ant-spin-spinning"
>
  <div
    class="ant-progress ant-progress-loading ant-progress-status-normal ant-progress-show-info ant-progress-default ant-spin-dot"
  >
    <div
      class="ant-progress-inner"
      style="width:30px;height:30px"
    >
      <svg
        viewBox="0 0 50 50"
      >
        <circle
          cx="25"
          cy="25"
          fill="none"
          r="20"
          stroke="#3367d6"
          stroke-width="4"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`renders ./components/spin/demo/custom-indicator.md correctly 1`] = `
<div
  class="ant-spin ant-spin-spinning"
>
  <span
    class="ant-spin-dot ant-spin-dot-spin ant-spin-dot"
    style="width:20px;height:20px"
  >
    <i />
    <i />
    <i />
    <i />
  </span>
</div>
`;

exports[`renders ./components/spin/demo/delayAndDebounce.md correctly 1`] = `
<div>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-alert ant-alert-info ant-alert-with-description ant-alert-no-icon"
        data-show="true"
      >
        <span
          class="ant-alert-message"
        >
          Alert message title
        </span>
        <span
          class="ant-alert-description"
        >
          Further details about the context of this alert.
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-top:16px"
  >
    Loading state：
    <span
      class="ant-switch"
      tabindex="0"
    >
      <span
        class="ant-switch-inner"
      />
    </span>
  </div>
</div>
`;

exports[`renders ./components/spin/demo/inside.md correctly 1`] = `
<div
  class="example"
>
  <div
    class="ant-spin ant-spin-spinning"
  >
    <div
      class="ant-progress ant-progress-loading ant-progress-status-normal ant-progress-show-info ant-progress-default ant-spin-dot"
    >
      <div
        class="ant-progress-inner"
        style="width:30px;height:30px"
      >
        <svg
          viewBox="0 0 50 50"
        >
          <circle
            cx="25"
            cy="25"
            fill="none"
            r="20"
            stroke="#3367d6"
            stroke-width="4"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/spin/demo/nested.md correctly 1`] = `
<div>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-alert ant-alert-info ant-alert-with-description ant-alert-no-icon"
        data-show="true"
      >
        <span
          class="ant-alert-message"
        >
          Alert message title
        </span>
        <span
          class="ant-alert-description"
        >
          Further details about the context of this alert.
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-top:16px"
  >
    Loading state：
    <span
      class="ant-switch"
      tabindex="0"
    >
      <span
        class="ant-switch-inner"
      />
    </span>
  </div>
</div>
`;

exports[`renders ./components/spin/demo/size.md correctly 1`] = `
<div>
  <div
    class="ant-spin ant-spin-sm ant-spin-spinning"
  >
    <div
      class="ant-progress ant-progress-loading ant-progress-status-normal ant-progress-show-info ant-progress-default ant-spin-dot"
    >
      <div
        class="ant-progress-inner"
        style="width:20px;height:20px"
      >
        <svg
          viewBox="0 0 50 50"
        >
          <circle
            cx="25"
            cy="25"
            fill="none"
            r="20"
            stroke="#3367d6"
            stroke-width="4"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="ant-spin ant-spin-spinning"
  >
    <div
      class="ant-progress ant-progress-loading ant-progress-status-normal ant-progress-show-info ant-progress-default ant-spin-dot"
    >
      <div
        class="ant-progress-inner"
        style="width:30px;height:30px"
      >
        <svg
          viewBox="0 0 50 50"
        >
          <circle
            cx="25"
            cy="25"
            fill="none"
            r="20"
            stroke="#3367d6"
            stroke-width="4"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="ant-spin ant-spin-lg ant-spin-spinning"
  >
    <div
      class="ant-progress ant-progress-loading ant-progress-status-normal ant-progress-show-info ant-progress-default ant-spin-dot"
    >
      <div
        class="ant-progress-inner"
        style="width:50px;height:50px"
      >
        <svg
          viewBox="0 0 50 50"
        >
          <circle
            cx="25"
            cy="25"
            fill="none"
            r="20"
            stroke="#3367d6"
            stroke-width="4"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/spin/demo/tip.md correctly 1`] = `
<div
  class="ant-spin-nested-loading"
>
  <div>
    <div
      class="ant-spin ant-spin-spinning ant-spin-show-text"
    >
      <div
        class="ant-progress ant-progress-loading ant-progress-status-normal ant-progress-show-info ant-progress-default ant-spin-dot"
      >
        <div
          class="ant-progress-inner"
          style="width:30px;height:30px"
        >
          <svg
            viewBox="0 0 50 50"
          >
            <circle
              cx="25"
              cy="25"
              fill="none"
              r="20"
              stroke="#3367d6"
              stroke-width="4"
            />
          </svg>
        </div>
      </div>
      <div
        class="ant-spin-text"
      >
        Loading...
      </div>
    </div>
  </div>
  <div
    class="ant-spin-container ant-spin-blur"
  >
    <div
      class="ant-alert ant-alert-info ant-alert-with-description ant-alert-no-icon"
      data-show="true"
    >
      <span
        class="ant-alert-message"
      >
        Alert message title
      </span>
      <span
        class="ant-alert-description"
      >
        Further details about the context of this alert.
      </span>
    </div>
  </div>
</div>
`;
